[package]
name = "nouislider"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["examples/yew-component"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["Event", "HtmlElement"]

[badges]
maintenance = { status = "actively-developed" }
