[package]
edition = "2021"
name = "nouislider"
version = "0.1.0"

authors = ["jsjolund <jsjolund@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A wasm-bindgen wrapper for noUiSlider"
homepage = "https://github.com/jsjolund/nouislider-rs"
repository = "https://github.com/jsjolund/nouislider-rs"

# [workspace]
# members = ["examples/yew-component"]

[dependencies]
js-sys = "0.3"
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2"

[dependencies.web-sys]
features = ["Event", "HtmlElement", "HtmlDivElement"]
version = "0.3"

[badges]
maintenance = {status = "actively-developed"}
