[package]
name = "nouislider-rs-example-yew-component"
version = "0.1.0"
edition = "2021"

[dependencies]
nouislider = {path = "../../"}

yew = {git = "https://github.com/yewstack/yew.git", features = ["csr"]}
wasm-bindgen = "0.2"
gloo-utils = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-logger = "0.2"
serde-wasm-bindgen = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlAnchorElement", "console", "Window", "Document"]
