[package]
edition = "2021"
name = "nouislider-rs-example-yew-component"
version = "0.1.0"

[dependencies]
nouislider = {path = "../../"}

chrono = {version = "0.4", features = ["wasmbind", "js-sys"]}
getrandom = {version = "0.2", features = ["js"]}
gloo-utils = "0.1"
log = "0.4"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde-wasm-bindgen = "0.4.5"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
yew = {git = "https://github.com/yewstack/yew.git", features = ["csr"]}
js-sys = "0.3"

[dependencies.web-sys]
features = ["HtmlAnchorElement", "console", "Window", "Document", "HtmlDivElement"]
version = "0.3"
